--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
@@ -10,29 +10,18 @@
     "test": "jest --detectOpenHandles --forceExit",
     "test:unit": "jest --testPathPattern=src/tests/unit --detectOpenHandles --forceExit",
     "test:integration": "jest --testPathPattern=src/tests/integration --detectOpenHandles --forceExit",
-    "test:manual": "ts-node src/tests/manual-error-test.ts",
-    "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint --ext .ts src/",
     "lint:fix": "eslint --fix --ext .ts src/",
     "format": "prettier --write \"src/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\"",
     "type-check": "tsc --noEmit",
-    "prepare": "husky install",
-    "reset:student": "ts-node src/scripts/reset/resetStudent.ts",
-    "reset:course": "ts-node src/scripts/reset/resetCourse.ts",
-    "reset:enrollment": "ts-node src/scripts/reset/resetEnrollment.ts",
-    "reset:user": "ts-node src/scripts/reset/resetUser.ts",
-    "reset:all": "ts-node src/scripts/reset/resetTables.ts all",
-    "reset": "ts-node src/scripts/reset/resetTables.ts"
+    "reset:all": "ts-node src/scripts/reset/resetTables.ts all"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -46,8 +35,7 @@
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^11.1.0",
-    "xss-clean": "^0.1.4"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -69,21 +57,12 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-security": "^1.7.1",
-    "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "lint-staged": "^13.2.1",
-    "nodemon": "^3.1.10",
     "prettier": "^2.8.7",
     "sqlite3": "^5.1.7",
     "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "eslint --fix",
-      "prettier --write"
-    ]
   }
 }
